# cxxDesignPatterns

./: .gitignore  CMakeLists.txt
NVI/: CMakeLists.txt  non_virtual_interface.cpp
commands/: CMakeLists.txt  cmdMethods.cc
exceptionSafety/: CMakeLists.txt  exception_safety_guarantees.cpp  handled_exception.sh
headerOnlyLib/: CMakeLists.txt  README.md
headerOnlyLib/inlineState/: CMakeLists.txt  common.hh  headerOnlyLibC.hh  myLib.cpp  myLib.hh  myLibTest.cpp  staticLibA.cpp
inTermsOf/: CMakeLists.txt  implemented.cpp  implemented_in_terms_of.cpp
memory/: CMakeLists.txt  objectPool.hpp  page.hpp  smartPointer.hpp  test_objectPool.cpp  test_page.cpp  test_smartPointer.cpp
pimpl/: CMakeLists.txt  fooService.cpp  fooService.hpp  test_fooService.cpp
